# MCPServerGithub

./: .gitignore  README.md  pyproject.toml
src/: server.py
